--- a/src/test/resources/textprops/scp/login_text_en.properties
+++ b/src/test/resources/textprops/scp/login_text_en.properties
@@ -1,7 +1,9 @@
-//loginPageUrl                 = /SCM_10.0_S-SCP/
-//loginPageTitle               = SCM :Login
-loginPageUrl                 = /u-wgl-r2.smartcmobile.net/
-loginPageTitle               = WGL: Login
+#loginPageUrl                 = /SCM_10.0_S-SCP/
+//loginPageTitle              = SCM :Login
+#loginPageUrl                 = /u-wgl-r2.smartcmobile.net/
+loginPageUrl                 = https://pwccx.smartcmobile.com/portal/default.aspx
+#loginPageTitle              = WGL: Login
+loginPageTitle               = SCM :Login
 loginPageHeader              = LOGIN
 lblUsername                  = Username
 lblPassword                  = Password
