--- a/src/test/resources/textprops/pay/payment_information_text_en.properties
+++ b/src/test/resources/textprops/pay/payment_information_text_en.properties
@@ -37,7 +37,7 @@ txtErrMsgAddress											= Please enter Address
 txtErrMsgCity   											= Please enter City
 txtErrMsgState   											= Please enter State
 txtErrMsgZip   												= Please enter ZIP code
-txtSuccessAddMsg											= Payment method successfully added
+txtSuccessAddMsg											= Payment Method Added Successfully.
 txtDeleteProfile											= Profile Deleted Successfully!
 txtDefaultSuccessMsg										= Your Payment Info has been updated successfully.
 
