Updated Billing Test Scripts

--- a/src/test/resources/textprops/pay/payment_information_text_en.properties
+++ b/src/test/resources/textprops/pay/payment_information_text_en.properties
@@ -32,11 +32,11 @@ txtErrMsgRoutingNumberMissMatch								= Routing Numbers do not match, please en
 txtErrMsgInvalidRoutingNumber								= Please enter a valid routing Number.
 txtErrMsgAccountNumber                                      = Please enter a valid 3 to 17 digit Bank Account Number.
 txtErrMsgAccountNumberMissMatch								= Account Numbers do not match, please enter the same Bank Account Number
-txtErrMsgLastName											= Please enter Last Name
-txtErrMsgAddress											= Please enter Address
-txtErrMsgCity   											= Please enter City
-txtErrMsgState   											= Please enter State
-txtErrMsgZip   												= Please enter ZIP code
+txtErrMsgLastName											= Please Enter Last Name
+txtErrMsgAddress											= Please Enter Address
+txtErrMsgCity   											= Please Enter City
+txtErrMsgState   											= Please Enter State
+txtErrMsgZip   												= Please Enter ZIP code
 txtSuccessAddMsg											= Payment Method Added Successfully.
 txtDeleteProfile											= Profile Deleted Successfully!
 txtDefaultSuccessMsg										= Your Payment Info has been updated successfully.
@@ -47,11 +47,11 @@ lblExpMonth													= Month
 lblExpYear													= Year
 lblSecurityCode												= Security code
 txtErrMsgBlankCardHolderName								= Please enter Card Holder Name.
-txtErrMsgBlankCardNum										= Please enter Card Number
+txtErrMsgBlankCardNum										= Please Enter Card Number
 maxLengthCardNumber											= 23
 txtErrMsgBlankMonth											= Please select Month
 txtErrBlankYear												= Please select Year 
-txtErrSecuritycode                                   		= Please enter 3 digit Security code
+txtErrSecuritycode                                   		= Please Enter Security code
 txtErrSecuritycodeAmex                                   	= Please enter 4 digit Security code
 txtErrInvalidCardNum										= Please enter a valid 12 to 19 digit Card Number.
 txtCardNameVisaCard											= VISA
@@ -67,3 +67,4 @@ txtAutoPaySuccessMsg										= Your Automatic Payment details have been saved s
 txtPaypalSubTag												= Enter your email address to get started.
 payPalLoginEmail											= lakshit.gupta07@gmail.com
 payPalLoginPass												= Paypalpass123!
+lblNameOnCard                                               = Please Enter Name on Card
