--- a/src/test/resources/textprops/pay/payment_information_text_en.properties
+++ b/src/test/resources/textprops/pay/payment_information_text_en.properties
@@ -32,12 +32,19 @@ txtErrMsgRoutingNumberMissMatch								= Routing Numbers do not match, please en
 txtErrMsgInvalidRoutingNumber								= Please enter a valid routing Number.
 txtErrMsgAccountNumber                                      = Please enter a valid 3 to 17 digit Bank Account Number.
 txtErrMsgAccountNumberMissMatch								= Account Numbers do not match, please enter the same Bank Account Number
-txtErrMsgLastName											= Please Enter Last Name
-txtErrMsgAddress											= Please Enter Address
-txtErrMsgCity   											= Please Enter City
-txtErrMsgState   											= Please Enter State
-txtErrMsgZip   												= Please Enter ZIP code
-txtSuccessAddMsg											= Payment Method Added Successfully.
+#txtErrMsgLastName											= Please Enter Last Name
+txtErrMsgLastName											= Please enter Last Name
+#txtErrMsgAddress											= Please Enter Address
+txtErrMsgAddress											= Please enter Address
+#txtErrMsgCity   											= Please Enter City
+txtErrMsgCity   											= Please enter City
+#txtErrMsgState   											= Please Enter State
+txtErrMsgState   											= Please enter State
+#txtErrMsgZip   												= Please Enter ZIP code
+txtErrMsgZip   												= Please enter ZIP code
+#txtSuccessAddMsg											= Payment Method Added Successfully.
+#txtSuccessAddMsg											= Payment method successfully added
+txtSuccessAddMsg											= Payment method already added.
 txtDeleteProfile											= Profile Deleted Successfully!
 txtDefaultSuccessMsg										= Your Payment Info has been updated successfully.
 
@@ -67,4 +74,5 @@ txtAutoPaySuccessMsg										= Your Automatic Payment details have been saved s
 txtPaypalSubTag												= Enter your email address to get started.
 payPalLoginEmail											= lakshit.gupta07@gmail.com
 payPalLoginPass												= Paypalpass123!
-lblNameOnCard                                               = Please Enter Name on Card
+#lblNameOnCard                                               = Please Enter Name on Card
+lblNameOnCard                                               = Card Holder Name.
