Forgot Username, Forgot Password, Problem Signing In, Pre-Login ACH

--- a/src/test/resources/textprops/scp/dashboard_text_en.properties
+++ b/src/test/resources/textprops/scp/dashboard_text_en.properties
@@ -33,7 +33,8 @@ lblSmartDevicesConnected   = YOUR NEST IS CONNECTED
 lblSmartDeviceName         = Nest
 lblSmartDeviceOptions      = ON/OFF, ECO, COOL, HEAT, FAN
 lblAddRemoveDeviceLink     = Add/Remove Device
-lblAutoPayTitle            = CONVENIENT AUTOMATIC PAYMENTSVersion No. 10
+#lblAutoPayTitle            = CONVENIENT AUTOMATIC PAYMENTSVersion No. 10
+lblAutoPayTitle            = CONVENIENT AUTOMATIC PAYMENTS
 lblAutoPayHeader           = CONVENIENT AUTOMATIC PAYMENTS
 lblAutoPaySubTitle         = CONVENIENT AUTOMATIC PAYMENTS
 #lblHowYouDoing             = THIS IS HOW YOU\u2019RE DOING SO FAR
