--- a/src/test/resources/textprops/scp/login_text_en.properties
+++ b/src/test/resources/textprops/scp/login_text_en.properties
@@ -23,6 +23,7 @@ loginWithBlankPasswordErrMsg = Please enter Password.
 invalidCredentialsErrMsg     = Invalid Username or Password. Please check and try again.
 loginWithDeactiveUserErrMsg  = Your Account has been Deactivated. For further assistance contact Customer Service by email at Support@SEW1.in or by phone at (737) 073-9999.
 accountIPBlockedErrMsg       = Invalid Username or Password. Please check and try again.
+acctIPLockedErrMsg        = You have been temporarily blocked for security purposes. Please try again later after 10 minute(s). If you need assistance contact Customer Service by email at Support@SEW1.in or by phone at (737) 073-9998.
 lblChatWindowHeading         = Chat with us
 lnkAdvancedServices			 = Advanced Services
 lnkPayBill					 = Pay Bill
