--- a/src/test/resources/textprops/scp/pre_log_services_request_text_en.properties
+++ b/src/test/resources/textprops/scp/pre_log_services_request_text_en.properties
@@ -2,10 +2,11 @@ expServiceUrl                                     =   /outer-service-request_tem
 expServiceTitle                                   =   Service Request
 featureNameSrp                                    =   Services
 pageHeaderSrp                                     =   Services
-urlAppendedTextSrp                                =   /images/scm_logo.png
-expNewRequestLabelSrp                             =   New Request
-expTrackRequestLabelSrp                           =   Track Request
-expSavedFormLabelSrp                              =   Saved Forms
+#urlAppendedTextSrp                                =   /images/scm_logo.png
+urlAppendedTextSrp                                =https://pwc-ccb.smartcmobile.com/Portal/images/scm_logo.png
+expNewRequestLabelSrp                             =   NEW REQUEST
+expTrackRequestLabelSrp                           =   TRACK REQUEST
+expSavedFormLabelSrp                              =   SAVED FORMS
 selectedTabAttributeSrp                           =   active
 searchRequestPlaceHolderSrp                       =   Request ID
 expDdServiceReasonSrp                             =   Move Out
@@ -27,7 +28,6 @@ expSidebarDetailsLabelSrp                         =   Details
 expSearchPlaceholderSrp                           =   Request Id
 expSaveFormsGridHeaderTextSrp                     =   Request Id, Form Topic, Saved Date, Action
 expTrackRequestIderrormsgSrp                      =   Please enter valid Request ID.
-expFileExtensionDisclaimerSrp                     =   gif, png, mp4, jpeg, pdf, jpg with maximum size of 5 MB
 txtLblInvalidFileFormatMsgSrp                     =   Invalid File Type. File extensions allowed are : gif, png, mp4, jpeg, pdf, jpg with maximum size of 5 MB
 expOtpAuthheadermsgSrp                            =   Authentication Failed
 expOtpAuthmsgSrp                                  =   You have exceeded the maximum number of verification attempts.
@@ -61,3 +61,18 @@ txtContactusContactNo                             =   (111) 111-8865
 txtContactusEmailId                               =   Support@SEW1.in
 expectedTrackrequestBlankotperrormsgSrp           =   Please enter all the required information
 txtEmailAddressSrp                                =   Please enter valid Email Address.
+txtContactInfoDisclaimer                          =   Please enter contact information for the person responsible for the account
+txtadultBeLivingDisclairmer                       =   Will any other adult be living at the new service address?
+txtUsethisFormDisclaimer                          =   Now Use this form to contact Smart Energy Water to make a service request such as move in, move out, transfer service, etc. 
+txtProcessedReq                                   =   (Requests will be processed the next business day)
+txtWhenDisclaimer                                 =   WHEN?
+txtContcttInfoDisclaimer                          = CONTACT INFORMATION
+txtMailingAddDisclaimer                           = MAILING ADDRESS
+txtAttachmentDisclaimer                           = gif, png, mp4, jpeg, pdf, jpg with maximum size of 5 MB                                      
+
+
+
+
+
+
+
