--- a/src/test/resources/textprops/scp/post_log_connect_me_text_en.properties
+++ b/src/test/resources/textprops/scp/post_log_connect_me_text_en.properties
@@ -1,7 +1,7 @@
 //ConnectMePageTitle                        = Connect me
  ConnectMePageTitle                          = Contact Us
 #ConnectMePageUrl                          = /connect-me_template.aspx
-ConnectMePageUrl                          =  https://pwc-ccb.smartcmobile.com/portal/contact-us-connect-me_template.aspx?ct=jm6g+vbyllneluj6q0znhfk=
+ConnectMePageUrl                          =  https://pwc-ccb.smartcmobile.com/portal/connect-me_template.aspx
 lblThankYouForWriting                     = Thank you for writing in. We will get back to you in 2 working days. Please note down your Request ID:
 toasterMsgBlankForm                       = Please enter all the mandatory information.
 txtCommentBoxErrorMsg                     = Please provide Comments.
