Added script for NP

--- a/src/test/resources/textprops/scp/notification_preference_text_en.properties
+++ b/src/test/resources/textprops/scp/notification_preference_text_en.properties
@@ -49,7 +49,11 @@ txtLblTcpaPopupBodyMsgOnCheckNpp                  =   You agree that Smart Energ
                                                 which these calls or text messages are made to you may include, but is not limited to, the use of pre-\
                                                 recorded/artificial voice messages and/or automatic telephone dialing system. You can edit your \
                                                 notification preferences for your account at any time.\nCurrently you have opted in to receive notifications for the following categories:
-txtLblTcpaPopupBodyMsgOnUncheck                   =   By unchecking these options, you agree that you have revoked your previously given consent for the \
+                                                
+txtLblTcpaKeyword                               = Outage: IVR  Outage: Text
+txtOutageIVRCheckedType                         = Outage: IVR
+txtOutageTextCheckedType                        = Outage: Text
+txtLblTcpaPopupBodyMsgOnUncheck                  =   By unchecking these options, you agree that you have revoked your previously given consent for the \
                                                 following communication notifications:
 txtLblTcpaConfirmationBodyMsgNpp                  =   By disagreeing, your changes for TEXT and IVR will not be saved. \
                                                 Any other changes not related to TEXT and IVR will be saved accordingly based on your selection.
