--- a/src/test/resources/textprops/scp/pre_log_services_request_text_en.properties
+++ b/src/test/resources/textprops/scp/pre_log_services_request_text_en.properties
@@ -69,10 +69,10 @@ txtWhenDisclaimer                                 =   WHEN?
 txtContcttInfoDisclaimer                          = CONTACT INFORMATION
 txtMailingAddDisclaimer                           = MAILING ADDRESS
 txtAttachmentDisclaimer                           = gif, png, mp4, jpeg, pdf, jpg with maximum size of 5 MB                                      
-
-
-
-
-
+txtpopup                                          = Your Service Request has been submitted successfully.
+txtErrorZipCodeMsg                                = Please enter Zip code
+txtPrimaryConErrMsg                               = Please enter a valid 10 digit Primary Contact Number.
+txtFnameErrMsg                                     = Please enter First Name
+txtLnameErrMsg                                    = Please enter Last Name.
 
 
