Added Code for the My profile Module

--- a/src/test/resources/textprops/scp/marketing_pref_text_en.properties
+++ b/src/test/resources/textprops/scp/marketing_pref_text_en.properties
@@ -1,4 +1,4 @@
-marketingPageUrl            = /SCM_10.0_S-SCP/account.aspx
+marketingPageUrl            = https://pwc-ccb.smartcmobile.com/Portal/account.aspx
 marketingPageTitle          = Profile Information
 marketingPageHeader         = MARKETING PREFERENCE
 marketingPreferenceDesc     = Manage your account to select the alerts you would like to receive
