--- a/src/test/resources/textprops/scp/myprofile_text_en.properties
+++ b/src/test/resources/textprops/scp/myprofile_text_en.properties
@@ -1,5 +1,7 @@
 #myAccountPageUrl         = /u-wgl-r2.smartcmobile.net/portal/account.aspx
-myAccountPageUrl        = /pwccx.smartcmobile.com/Portal/account.aspx
+#myAccountPageUrl        = /pwccx.smartcmobile.com/Portal/account.aspx
+myAccountPageUrl          = https://pwc-ccb.smartcmobile.com/Portal/account.aspx
+
 myAccountPageTitle       = Profile Information
 LblAccountInformation    = Account Information
 UserNameLabel            = USERNAME
@@ -224,3 +226,5 @@ txtBtnCancelEditBillTypePopup                  = Cancel
 txtBtnContinueEditBillTypePopup                = Save
 ##### Account Information
 txtLblAccountInformation                       = Account Information
+txtUpdateMailingAddQues                        =How can I update my mailing address?
+txtUpdateMailingAddAns                          =  In the Account module, the Account Information module allows you to update your mailing address. Click the Kebab menu icon on the required account and then click Edit Mailing Address. Make the required changes and click Update.
