For PreLogin ACH, Guest User and About My Home

--- a/src/test/resources/textprops/scp/about_my_home_en.properties
+++ b/src/test/resources/textprops/scp/about_my_home_en.properties
@@ -3,3 +3,12 @@ expectedAboutMyHomePageUrl                        =   https://pwc-ccb.smartcmobi
 expectedAboutMyHomePageTitle                      =   About My Home
 txtLblAboutMyBusinessPageHeadingAos               =   About My Business
 successfulformsubmitmssg                          =   Thank you! Your submission was successful.
+solarPanelInfoIcon                                =   Solar panel is designed to absorb the sun
+#homeSizeInfoIcon                                  =   Q. How to determine square footage?<br> \
+A. Round your measurements off to the nearest 0.5 linear foot. Multiply the length times the width of each section to find the square footage. Add up the square feet of each section to find the total square footage of the house. Round your total off to the nearest square foot.
+highEfficiencyInfoIcon                            = Energy efficient appliances use less electricity to achieve the same level of performance to similar models with the same size or capacity
+lotSizeInfoIcon                                   = Lot structures include a house, private walkways, and in back - a detached garage with driveway access to the alley and a small area for garbage.
+landscapeAreaInfoIcon                             = Landscape is a given area of land improved by carefully designed planting and arrangement. It includes front or back yard garden or stone-paved pathway
+landSizeAreaInfoIcon                              = Special Landscape Area means an area of the landscape dedicated solely to edible plants and areas irrigated with recycled water, water features using recycled water
+zerovalpopupmssg                                  = Zero or Negative value is not allowed for home Size, house build, solar, bathrooms, efficiency, lots, land scape area, special landscape area.
+buildYearLessThan1900                             = Build year should be greater than 1900.
