--- a/src/test/resources/textprops/pay/payment_information_text_en.properties
+++ b/src/test/resources/textprops/pay/payment_information_text_en.properties
@@ -44,7 +44,7 @@ txtErrMsgState   											= Please enter State
 txtErrMsgZip   												= Please enter ZIP code
 #txtSuccessAddMsg											= Payment Method Added Successfully.
 #txtSuccessAddMsg											= Payment method successfully added
-txtSuccessAddMsg											= Payment method already added.
+txtSuccessAddMsg											= Payment method successfully added
 txtDeleteProfile											= Profile Deleted Successfully!
 txtDefaultSuccessMsg										= Your Payment Info has been updated successfully.
 
@@ -74,5 +74,6 @@ txtAutoPaySuccessMsg										= Your Automatic Payment details have been saved s
 txtPaypalSubTag												= Enter your email address to get started.
 payPalLoginEmail											= lakshit.gupta07@gmail.com
 payPalLoginPass												= Paypalpass123!
-#lblNameOnCard                                               = Please Enter Name on Card
+#lblNameOnCard                                              = Please Enter Name on Card
 lblNameOnCard                                               = Card Holder Name.
+txtErrMsgValidRouting                                       = Please enter a valid routing Number.
