Post Login Services test cases

--- a/src/test/resources/textprops/scp/pre_log_services_request_text_en.properties
+++ b/src/test/resources/textprops/scp/pre_log_services_request_text_en.properties
@@ -1,4 +1,5 @@
 expServiceUrl                                     =   /outer-service-request_template.aspx
+PostlogUrl                                        =   https://pwc-ccb.smartcmobile.com/Portal/service-request_template.aspx
 expServiceTitle                                   =   Service Request
 featureNameSrp                                    =   Services
 pageHeaderSrp                                     =   Services
@@ -28,7 +29,7 @@ expSidebarDetailsLabelSrp                         =   Details
 expSearchPlaceholderSrp                           =   Request Id
 expSaveFormsGridHeaderTextSrp                     =   Request Id, Form Topic, Saved Date, Action
 expTrackRequestIderrormsgSrp                      =   Please enter valid Request ID.
-txtLblInvalidFileFormatMsgSrp                     =   Invalid File Type. File extensions allowed are : gif, png, mp4, jpeg, pdf, jpg with maximum size of 5 MB
+txtLblInvalidFileFormatMsgSrp                     =   Invalid File Type. File extensions allowed are : gif, png, mp4, jpeg, pdf, jpgwith maximum size of 5 MB
 expOtpAuthheadermsgSrp                            =   Authentication Failed
 expOtpAuthmsgSrp                                  =   You have exceeded the maximum number of verification attempts.
 txtLblPageHeaderSrp                               =   CONNECT ME
@@ -72,7 +73,8 @@ txtAttachmentDisclaimer                           = gif, png, mp4, jpeg, pdf, jp
 txtpopup                                          = Your Service Request has been submitted successfully.
 txtErrorZipCodeMsg                                = Please enter Zip code
 txtPrimaryConErrMsg                               = Please enter a valid 10 digit Primary Contact Number.
-txtFnameErrMsg                                     = Please enter First Name
+txtFnameErrMsg                                    = Please enter First Name
 txtLnameErrMsg                                    = Please enter Last Name.
-
+txtNoRecords                                      = No matching records found
+txtNoRecord                                       = Please enter all the mandatory information.
 
