Revert "Aradhana branch"

--- a/src/test/resources/textprops/scp/login_text_en.properties
+++ b/src/test/resources/textprops/scp/login_text_en.properties
@@ -14,9 +14,9 @@ lblForgotUsername            = Forgot Username
 lblForgotPassword            = Forgot Password
 lblProblemSignIn             = Problem Signing In?
 lblRegisterLnk               = Register Here
-txLblRegistrationEnglish     = Register Here
-txLblRegistrationEspanol     = Registrar aquí
-txLblRegistrationFrance      = Inscrivez-vous ici
+txLblRegistrationEnglish     = Sign In
+txLblRegistrationEspanol     = Registrarse
+txLblRegistrationFrance      = Se connecter
 loginWithBlankCredsErrMsg    = Please enter Username and Password.
 loginWithBlankUsernameErrMsg = Please enter Username.
 loginWithBlankPasswordErrMsg = Please enter Password.
