--- a/src/test/resources/textprops/scp/pre_log_connect_me_text_en.properties
+++ b/src/test/resources/textprops/scp/pre_log_connect_me_text_en.properties
@@ -13,4 +13,4 @@ invalidFileType                           = Invalid File Type. File extensions a
 blankTrackRequest                         = Please enter valid Request ID.
 invalidTrackRequest                       = Please enter valid Request ID.
 enterInvalidOTP                           = The entered authentication code is not correct. Please check your email again for the correct code.
-ConnectMePageUrl                          = https://pwc-ccb.smartcmobile.com/portal/contact-us-connect-me_template.aspx
+ConnectMePageUrl                          = https://pwc-ccb.smartcmobile.com/portal/contact-us-connect-me_template.aspx?ct=jm6g+vbyllneluj6q0znhfk=
